# E-com

backend/: .env.example  Dockerfile  pyproject.toml  schema.sql
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/crud/: orders.py  products.py
backend/app/routers/: auth.py  orders.py  products.py
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ProductCard.tsx
frontend/src/pages/: Checkout.tsx  Orders.tsx  Products.tsx
frontend/src/store/: cart.ts
